<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >













        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                >

                <EditText
                    android:id="@+id/usernumber"
                    android:gravity="left"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Phone"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/prompt_email"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp">



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:gravity="left"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pref_user_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                >

                <EditText
                    android:id="@+id/userpassword"
                    android:gravity="left"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />



            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingTop="10dp"

                >

                <EditText
                    android:id="@+id/reuserpassword"
                    android:gravity="left"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_Reenter_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"                />

            </android.support.design.widget.TextInputLayout>


        </android.support.v7.widget.CardView>




        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colornBack"
            android:background="@color/colorAccentLight"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rgi_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colornBack"
            android:background="@color/colorAccentLight"
            android:text="@string/action_regi"
            android:textStyle="bold"
            android:onClick="rgionClick"

            />






        <com.google.android.gms.common.SignInButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/google_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="80dp"
            android:textStyle="bold"
            app:colorScheme="dark"

            />


        <Button
            android:id="@+id/face_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colornBack"
            android:background="@color/FacebookColor"
            android:text="@string/title_facebook"
            android:textStyle="bold" />




    </LinearLayout>
</ScrollView>
